crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-7.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"preserve\": [\"circle\", \"rect\"]\n        } }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 230 120\">\n    <!-- Prevent modifications on preserved ids -->\n    <circle id=\"circle001\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <rect id=\"rect001\" fill=\"blue\" x=\"120\" y=\"10\" width=\"100\" height=\"100\"/>\n    <view id=\"circle\" viewBox=\"0 0 120 120\"/>\n    <view id=\"rect\" viewBox=\"110 0 120 120\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 120">
    <!-- Prevent modifications on preserved ids -->
    <circle fill="red" cx="60" cy="60" r="50"></circle>
    <rect fill="blue" x="120" y="10" width="100" height="100"></rect>
    <view id="circle" viewBox="0 0 120 120"></view>
    <view id="rect" viewBox="110 0 120 120"></view>
</svg>
