crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-9.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"force\": true,\n            \"preserve\": [\"figure\"]\n        } }\"#,\n        Some(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 120 120\">\n    <style>\n        svg .hidden { display: none; }\n        svg .hidden:target { display: inline; }\n    </style>\n    <defs>\n        <circle id=\"circle\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n        <rect id=\"rect\" fill=\"blue\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n    </defs>\n    <g id=\"figure\" class=\"hidden\">\n        <use href=\"#circle\"/>\n        <use href=\"#rect\"/>\n    </g>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120">
    <style>
        svg .hidden { display: none; }
        svg .hidden:target { display: inline; }
    </style>
    <defs>
        <circle id="a" fill="red" cx="60" cy="60" r="50"></circle>
        <rect id="b" fill="blue" x="10" y="10" width="100" height="100"></rect>
    </defs>
    <g id="figure" class="hidden">
        <use href="#a"></use>
        <use href="#b"></use>
    </g>
</svg>
